tests/baselines/reference/generatorTypeCheck54.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck54.ts(4,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck54.ts(5,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck54.ts (2 errors) ====
    class Foo { x: number }
    class Baz { z: number }
    function* g() {
        yield* [new Foo];
               ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        yield* [new Baz];
               ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    }